--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,16 +25,37 @@ header {
     justify-content: center;
     align-items: center;
     color: white;
+    width: 80%;
     
 }
 
 .form-create-user {
     background: rgba(51, 51, 160, 0.836);
     padding: 1.5rem;
-    margin-top: 9rem;
+    margin-top: 8rem;
     text-align: center ;
     
 }
+
+.form-box-user1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    width: 70%;
+    
+}
+
+.form-create-user1 {
+    background: rgba(7, 42, 117);
+    padding: 1.5rem;
+    margin-top: 8rem;
+    text-align: center ;
+    
+}
+
+
+
 
 .box_user_search {
     display: flex;
@@ -58,8 +79,14 @@ header {
 .edit {
     margin-top: 55px;
     margin-bottom: 0px;
+    position: relative;
 }
 
+
+
+.table {
+    margin-top: 50px;
+}
 
 .nav-link {
     color: white;
@@ -69,7 +96,7 @@ header {
 
 
 .titulo-productos {
-   font-size: 80px;
+   font-size: 52px;
    font-weight: bold;
     color: rgb(7, 42, 117) ;
     margin: 2rem;
@@ -175,10 +202,26 @@ table {
 .productos {
     display: flex;
     flex-wrap: wrap;
-    
+    justify-content: space-between;
 }
 
 .producto {
-    justify-content: center;
     text-align: center;
+    margin: 10px; 
+      transition: background-color .8s;
 }
+
+.titulo-producto {
+    margin-top: 24px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.producto:hover {
+    background-color:rgba(7, 42, 117);
+    color: white;
+border-radius: 8px;
+cursor: pointer;
+}
+
